# winbar

./: .gitignore  CMakeLists.txt  README.md  install.sh  suppressions.txt  taskbar.cpp
lib/: INIReader.h  application.cpp  application.h  audio.cpp  audio.h  bind_meta.cpp  bind_meta.h  container.cpp  container.h  dbus_helper.cpp  dbus_helper.h  defer.h  dpi.cpp  dpi.h  drawer.cpp  drawer.h  easing.cpp  easing.h  fts_fuzzy_match.h  hsluv.cpp  hsluv.h  icons.cpp  icons.h  picomath.hpp  simple_dbus.cpp  simple_dbus.h  stb_image.h  stb_rect_pack.h  utility.cpp  utility.h  volume_mapping.cpp  volume_mapping.h  xbacklight.cpp  xbacklight.h
src/: action_center_menu.cpp  action_center_menu.h  app_menu.cpp  app_menu.h  battery_menu.cpp  battery_menu.h  bluetooth_menu.cpp  bluetooth_menu.h  chatgpt.cpp  chatgpt.h  components.cpp  components.h  config.cpp  config.h  date_menu.cpp  date_menu.h  dbus.cpp  dbus.h  globals.cpp  globals.h  main.cpp  main.h  notifications.cpp  notifications.h  pinned_icon_editor.cpp  pinned_icon_editor.h  pinned_icon_right_click.cpp  pinned_icon_right_click.h  plugins_menu.cpp  plugins_menu.h  root.cpp  root.h  search_menu.cpp  search_menu.h  settings_menu.cpp  settings_menu.h  simple_dbus.cpp  simple_dbus.h  sleep_menu.cpp  sleep_menu.h  (+14 more)
winbar/: items_custom.ini  tofix.csv  winbar.cfg
wpa_ctrl/: wpa_ctrl.c  wpa_ctrl.h
